kubernetes/kustomize/backstage/overlays/preprod/deployment.patch.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backstage
spec:
  template:
    spec:
      containers:
        - name: backstage
          imagePullPolicy: Always
